modified index.html & created second page

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
             <section class="see-all">
                 <div class="see-all__container _container">
-                    <a href="#">
+                    <a href="catalog.html">
                         Browse All Product
                     </a>
                 </div>
