added page catalog

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                         <img src="img/profile.svg" alt="profile">
                     </a>
 
-                    <a href="#">
+                    <a href="#" class="header__right-bin">
                         <img src="img/bin.svg" alt="bin">
+                        <span class="header__right-bin-count">0</span>
                     </a>
                 </div>
 
@@ -41,7 +42,7 @@
                     <div class="nav__wrap">
                         <div class="nav__close">
                             <a href="#">
-                                <img src="img/close.svg" alt="close">
+                                <img src="img/close.svg" alt="close" class="nav__close">
                             </a>
                         </div>
 
