--- a/catalog.html
+++ b/catalog.html
@@ -91,7 +91,7 @@
                         <ul>
                             <li><a href="index.html">HOME</a></li>
                             <li><a href="#">MEN</a></li>
-                            <li><a href="#">NEW ARRIVALS</a></li>
+                            <li><a href="product.html">NEW ARRIVALS</a></li>
                         </ul>
                     </div>
                 </div>
