--- a/product.html
+++ b/product.html
@@ -125,11 +125,201 @@
             <section class="preview">
                 <div class="preview__container _container">
                     <div class="preview__upper upper">
+                        <h1 class="upper__heading">WOMEN COLLECTION</h1>
+                        <div class="upper__bd"></div>
+                        <h2 class="upper__title">MOSCHINO CHEAP AND CHIC</h2>
+                        <p class="upper__text">Compellingly actualize fully researched processes before proactive
+                            outsourcing. Progressively syndicate collaborative
+                            architectures before cutting-edge services. Completely visualize parallel core competencies
+                            rather than exceptional
+                            portals.
+                        </p>
+                        <h3 class="upper__price">$561</h3>
+                    </div>
 
+                    <div class="preview__lover lover">
+                        <div class="lover__bd"></div>
+                        <div class="lover__settings">
+                            <ul>
+                                <li>CHOOSE COLOR <img src="img/arroiw-drop.svg" alt="arrow"></li>
+                                <li>CHOOSE SIZE <img src="img/arroiw-drop.svg" alt="arrow"></li>
+                                <li>QUANTITY <img src="img/arroiw-drop.svg" alt="arrow"></li>
+                            </ul>
+                        </div>
+                        <div class="lover__btn">
+                            <a href="#">
+                                <svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="lover__img"
+                                        d="M5.49847 22.185C5.50635 21.752 5.64091 21.3309 5.88519 20.9748C6.12947 20.6186 6.47261 20.3431 6.87158 20.1828C7.27055 20.0226 7.7076 19.9848 8.12781 20.0741C8.54802 20.1635 8.93269 20.376 9.23358 20.685C9.53447 20.994 9.73817 21.3857 9.81909 21.811C9.90002 22.2363 9.85453 22.6763 9.68842 23.0756C9.52231 23.475 9.24296 23.8161 8.88538 24.0559C8.52779 24.2957 8.10791 24.4237 7.67847 24.4237C7.38955 24.4211 7.10399 24.3611 6.83807 24.2472C6.57216 24.1333 6.3311 23.9676 6.12866 23.7597C5.92623 23.5518 5.76639 23.3057 5.65826 23.0355C5.55013 22.7653 5.49584 22.4763 5.49847 22.185ZM21.3045 24.4237C20.8711 24.4303 20.4453 24.3087 20.0797 24.074C19.7141 23.8393 19.4247 23.5017 19.2471 23.103C19.0696 22.7042 19.0117 22.2618 19.0806 21.8303C19.1496 21.3988 19.3423 20.9971 19.6351 20.6748C19.9278 20.3524 20.3077 20.1236 20.728 20.0165C21.1482 19.9095 21.5903 19.929 21.9997 20.0724C22.4091 20.2159 22.7679 20.4771 23.0317 20.8238C23.2956 21.1706 23.453 21.5877 23.4845 22.0236C23.5269 22.6155 23.3369 23.2004 22.9555 23.6523C22.7706 23.8745 22.5436 24.0574 22.2877 24.1901C22.0319 24.3227 21.7524 24.4025 21.4655 24.4247L21.3045 24.4237ZM8.59351 17.4855C8.38116 17.4851 8.17488 17.414 8.00671 17.2833C7.83855 17.1525 7.71792 16.9694 7.66351 16.7624L3.73651 2.19527H0.978516C0.719001 2.19527 0.470064 2.09128 0.28656 1.90622C0.103056 1.72116 0 1.47018 0 1.20847C0 0.946764 0.103056 0.695782 0.28656 0.510726C0.470064 0.325669 0.719001 0.22168 0.978516 0.22168H4.45752C4.66982 0.222254 4.876 0.293463 5.04413 0.424184C5.21226 0.554905 5.33295 0.737883 5.38751 0.944787L9.31451 15.5119H20.0185L23.5765 7.12665H11.7185C11.459 7.12665 11.2101 7.02266 11.0266 6.83761C10.8431 6.65255 10.74 6.40157 10.74 6.13986C10.74 5.87815 10.8431 5.62717 11.0266 5.44211C11.2101 5.25705 11.459 5.15306 11.7185 5.15306H25.0535C25.2131 5.15352 25.3701 5.19451 25.5099 5.27223C25.6497 5.34995 25.7679 5.46195 25.8535 5.59784C25.9413 5.73569 25.9945 5.89303 26.0084 6.05627C26.0224 6.21951 25.9966 6.38368 25.9335 6.53465L21.5425 16.8935C21.469 17.0684 21.3462 17.2177 21.1895 17.3229C21.0327 17.4281 20.8488 17.4846 20.6605 17.4855H8.59351Z"
+                                        fill="#EF5B70" />
+                                </svg>
+                                Add to Cart
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="catalog">
+                <div class="catalog__container _container">
+                    <div class="catalog__card">
+                        <div class="catalog__img">
+                            <img src="img/card-4.jpg" alt="card-photo">
+                            <div class="catalog__overlay">
+                                <a href="#">
+                                    <img src="img/bin-card.svg" alt="bin">
+                                    <p>Add to Cart</p>
+                                </a>
+                            </div>
+                        </div>
+
+                        <h4>ELLERY X M'O CAPSULE</h4>
+                        <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
+                            Ellery teams up with Moda
+                            Operandi.
+                        </p>
+                        <h3>$52.00</h3>
+                    </div>
+
+                    <div class="catalog__card">
+                        <div class="catalog__img">
+                            <img src="img/card-3.jpg" alt="card-photo">
+                            <div class="catalog__overlay">
+                                <a href="#">
+                                    <img src="img/bin-card.svg" alt="bin">
+                                    <p>Add to Cart</p>
+                                </a>
+                            </div>
+                        </div>
+
+                        <h4>ELLERY X M'O CAPSULE</h4>
+                        <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
+                            Ellery teams up with Moda
+                            Operandi.
+                        </p>
+                        <h3>$52.00</h3>
+                    </div>
+
+                    <div class="catalog__card">
+                        <div class="catalog__img">
+                            <img src="img/card-6.jpg" alt="card-photo">
+                            <div class="catalog__overlay">
+                                <a href="#">
+                                    <img src="img/bin-card.svg" alt="bin">
+                                    <p>Add to Cart</p>
+                                </a>
+                            </div>
+                        </div>
+
+                        <h4>ELLERY X M'O CAPSULE</h4>
+                        <p>Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym
+                            Ellery teams up with Moda
+                            Operandi.
+                        </p>
+                        <h3>$52.00</h3>
+                    </div>
+                </div>
+            </section>
+
+            <section class="follow">
+                <div class="follow__container _container">
+                    <div class="follow__review">
+                        <img src="img/profile-photo.png" alt="profile">
+
+                        <h5>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <i>a pulvinar purus
+                                condimentum</i>“</h5>
+                    </div>
+
+                    <div class="follow__subscribe">
+                        <h3>SUBSCRIBE</h3>
+                        <h4>FOR OUR NEWLETTER AND PROMOTION</h4>
+
+                        <div class="follow__subscribe-send">
+                            <input type="email" placeholder="Enter Your Email">
+                            <div class="follow__subscribe-submit">
+                                <a href="#">
+                                    Subscibe
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="footer__container _container">
+                <div class="footer__text">
+                    <p>&copy 2021 Brand All Rights Reserved.</p>
+                </div>
+
+                <div class="footer__net">
+                    <ul>
+                        <li><a href="#">
+                                <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="white" d="M31.4506 0H0V32H31.4506V0Z" fill="white" />
+                                    <path class="black"
+                                        d="M19.0884 16.28L19.5069 13.616H16.8902V11.8873C16.8902 11.1585 17.2557 10.4481 18.4277 10.4481H19.6172V8.17997C19.6172 8.17997 18.5377 8 17.5056 8C15.3507 8 13.9422 9.27593 13.9422 11.5857V13.616H11.5469V16.28H13.9422V22.72H16.8902V16.28H19.0884Z"
+                                        fill="black" />
+                                </svg>
+                            </a></li>
+                        <li><a href="#">
+                                <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="white" d="M32.1889 0H0.738281V32H32.1889V0Z" fill="white" />
+                                    <g clip-path="url(#clip0_128:232)">
+                                        <path class="black"
+                                            d="M16.139 12.6816C14.0238 12.6816 12.3177 14.3849 12.3177 16.4966C12.3177 18.6083 14.0238 20.3117 16.139 20.3117C18.2541 20.3117 19.9602 18.6083 19.9602 16.4966C19.9602 14.3849 18.2541 12.6816 16.139 12.6816ZM16.139 18.9769C14.7721 18.9769 13.6547 17.8646 13.6547 16.4966C13.6547 15.1287 14.7688 14.0164 16.139 14.0164C17.5092 14.0164 18.6233 15.1287 18.6233 16.4966C18.6233 17.8646 17.5058 18.9769 16.139 18.9769ZM21.0078 12.5255C21.0078 13.0203 20.6087 13.4154 20.1165 13.4154C19.621 13.4154 19.2252 13.0169 19.2252 12.5255C19.2252 12.0341 19.6243 11.6357 20.1165 11.6357C20.6087 11.6357 21.0078 12.0341 21.0078 12.5255ZM23.5386 13.4287C23.4821 12.2367 23.2094 11.1808 22.3347 10.3109C21.4634 9.44097 20.4058 9.1687 19.2119 9.10894C17.9814 9.03921 14.2932 9.03921 13.0627 9.10894C11.8721 9.16538 10.8145 9.43765 9.93987 10.3076C9.06522 11.1775 8.79584 12.2333 8.73597 13.4253C8.66613 14.6539 8.66613 18.3361 8.73597 19.5646C8.79251 20.7566 9.06522 21.8124 9.93987 22.6824C10.8145 23.5523 11.8688 23.8246 13.0627 23.8843C14.2932 23.9541 17.9814 23.9541 19.2119 23.8843C20.4058 23.8279 21.4634 23.5556 22.3347 22.6824C23.2061 21.8124 23.4788 20.7566 23.5386 19.5646C23.6085 18.3361 23.6085 14.6572 23.5386 13.4287ZM21.949 20.8828C21.6895 21.5335 21.1874 22.0349 20.5322 22.2972C19.5511 22.6857 17.2231 22.596 16.139 22.596C15.0548 22.596 12.7235 22.6824 11.7457 22.2972C11.0939 22.0382 10.5917 21.5369 10.329 20.8828C9.93987 19.9033 10.0297 17.5791 10.0297 16.4966C10.0297 15.4142 9.9432 13.0867 10.329 12.1105C10.5884 11.4597 11.0906 10.9583 11.7457 10.696C12.7268 10.3076 15.0548 10.3972 16.139 10.3972C17.2231 10.3972 19.5545 10.3109 20.5322 10.696C21.184 10.955 21.6862 11.4564 21.949 12.1105C22.3381 13.09 22.2483 15.4142 22.2483 16.4966C22.2483 17.5791 22.3381 19.9066 21.949 20.8828Z"
+                                            fill="black" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_128:232">
+                                            <rect width="14.8991" height="17" fill="white"
+                                                transform="translate(8.68555 8)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </a></li>
+                        <li><a href="#">
+                                <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="white" d="M31.9252 0H0.474609V32H31.9252V0Z" fill="white" />
+                                    <g clip-path="url(#clip0_128:240)">
+                                        <path class="black"
+                                            d="M16.7403 8.20312C13.5556 8.20312 10.4082 10.3406 10.4082 13.8C10.4082 16 11.6374 17.25 12.3823 17.25C12.6896 17.25 12.8666 16.3875 12.8666 16.1438C12.8666 15.8531 12.1309 15.2344 12.1309 14.025C12.1309 11.5125 14.0305 9.73125 16.4889 9.73125C18.6027 9.73125 20.1671 10.9406 20.1671 13.1625C20.1671 14.8219 19.506 17.9344 17.3642 17.9344C16.5913 17.9344 15.9302 17.3719 15.9302 16.5656C15.9302 15.3844 16.7496 14.2406 16.7496 13.0219C16.7496 10.9531 13.835 11.3281 13.835 13.8281C13.835 14.3531 13.9002 14.9344 14.133 15.4125C13.7046 17.2688 12.8293 20.0344 12.8293 21.9469C12.8293 22.5375 12.9131 23.1188 12.969 23.7094C13.0745 23.8281 13.0218 23.8156 13.1832 23.7563C14.7476 21.6 14.6917 21.1781 15.3994 18.3562C15.7812 19.0875 16.7683 19.4812 17.5505 19.4812C20.8469 19.4812 22.3275 16.2469 22.3275 13.3313C22.3275 10.2281 19.6643 8.20312 16.7403 8.20312Z"
+                                            fill="black" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_128:240">
+                                            <rect width="11.9193" height="16" fill="white"
+                                                transform="translate(10.4082 8)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </a></li>
+                        <li><a href="#">
+                                <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="white" d="M31.6635 0H0.212891V32H31.6635V0Z" fill="white" />
+                                    <g clip-path="url(#clip0_128:236)">
+                                        <path class="black"
+                                            d="M22.417 12.7405C22.427 12.8826 22.427 13.0248 22.427 13.1669C22.427 17.5019 19.1498 22.4969 13.1599 22.4969C11.3145 22.4969 9.60022 21.9588 8.1582 21.0248C8.4204 21.0552 8.67247 21.0654 8.94475 21.0654C10.4674 21.0654 11.8691 20.5476 12.9884 19.6644C11.5565 19.6339 10.3565 18.6898 9.94305 17.3903C10.1447 17.4207 10.3464 17.441 10.5582 17.441C10.8506 17.441 11.1431 17.4004 11.4153 17.3294C9.92291 17.0248 8.80355 15.705 8.80355 14.1111V14.0705C9.23715 14.3141 9.74139 14.4664 10.2758 14.4867C9.39849 13.8979 8.82373 12.8928 8.82373 11.7557C8.82373 11.1466 8.98504 10.5882 9.26741 10.1009C10.8708 12.0908 13.2809 13.3902 15.9833 13.5324C15.9329 13.2887 15.9027 13.035 15.9027 12.7811C15.9027 10.974 17.3548 9.50195 19.1598 9.50195C20.0976 9.50195 20.9446 9.89789 21.5396 10.5375C22.2757 10.3954 22.9816 10.1212 23.6068 9.74561C23.3648 10.507 22.8505 11.1466 22.1749 11.5527C22.8304 11.4817 23.4657 11.2989 24.0505 11.0451C23.6069 11.6948 23.0522 12.2735 22.417 12.7405Z"
+                                            fill="black" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_128:236">
+                                            <rect width="15.8924" height="16" fill="white"
+                                                transform="translate(8.1582 8)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
