--- a/catalog.html
+++ b/catalog.html
@@ -209,7 +209,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
@@ -281,7 +281,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
@@ -299,7 +299,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
@@ -317,7 +317,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
@@ -335,7 +335,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
@@ -353,7 +353,7 @@
                             <div class="catalog__overlay">
                                 <a href="#">
                                     <img src="img/bin-card.svg" alt="bin">
-                                    <p>Add to card</p>
+                                    <p>Add to cart</p>
                                 </a>
                             </div>
                         </div>
