--- a/catalog.html
+++ b/catalog.html
@@ -207,7 +207,7 @@
                         <div class="catalog__img">
                             <img src="img/card-1.jpg" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
@@ -225,7 +225,7 @@
                         <div class="catalog__bgc catalog__img">
                             <img src="img/card-7.png" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
@@ -243,7 +243,7 @@
                         <div class="catalog__img">
                             <img src="img/card-3.jpg" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
@@ -261,7 +261,7 @@
                         <div class="catalog__img">
                             <img src="img/card-4.jpg" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
@@ -279,7 +279,7 @@
                         <div class="catalog__img">
                             <img src="img/card-8.jpg" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
@@ -297,7 +297,7 @@
                         <div class="catalog__img">
                             <img src="img/card-9.jpg" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
@@ -315,7 +315,7 @@
                         <div class="catalog__img">
                             <img src="img/card-10.jpg" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
@@ -333,7 +333,7 @@
                         <div class="catalog__img">
                             <img src="img/card-11.jpg" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
@@ -351,7 +351,7 @@
                         <div class="catalog__img">
                             <img src="img/card-12.jpg" alt="card">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to cart</p>
                                 </a>
