--- a/product.html
+++ b/product.html
@@ -167,7 +167,7 @@
                         <div class="catalog__img">
                             <img src="img/card-4.jpg" alt="card-photo">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to Cart</p>
                                 </a>
@@ -186,7 +186,7 @@
                         <div class="catalog__img">
                             <img src="img/card-3.jpg" alt="card-photo">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to Cart</p>
                                 </a>
@@ -205,7 +205,7 @@
                         <div class="catalog__img">
                             <img src="img/card-6.jpg" alt="card-photo">
                             <div class="catalog__overlay">
-                                <a href="#">
+                                <a href="cart.html">
                                     <img src="img/bin-card.svg" alt="bin">
                                     <p>Add to Cart</p>
                                 </a>
