--- a/cart.html
+++ b/cart.html
@@ -27,11 +27,11 @@
                         <img src="img/burger.svg" alt="burger" class="header__burger">
                     </a>
 
-                    <a href="#">
+                    <a href="reg.html">
                         <img src="img/profile.svg" alt="profile">
                     </a>
 
-                    <a href="#" class="header__right-bin">
+                    <a href="cart.html" class="header__right-bin">
                         <img src="img/bin.svg" alt="bin">
                         <span class="header__right-bin-count">0</span>
                     </a>
@@ -142,7 +142,7 @@
                         <input type="text" class="data__config" placeholder="State">
                         <input type="text" placeholder="Postcode / Zip">
 
-                        <button>GET A QUOTE</button>
+                        <button class="data__confirm">GET A QUOTE</button>
 
                         <div class="data__global">
                             <h3>sub total <span>$900</span></h3>
@@ -150,7 +150,7 @@
                             <div class="data__bd">
                                 <div class="data__border"></div>
                             </div>
-                            <button>PROCEED TO CHECKOUT</button>
+                            <button class="data__global-ok">PROCEED TO CHECKOUT</button>
                         </div>
                     </div>
                 </div>
