--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                         <img src="img/burger.svg" alt="burger" class="header__burger">
                     </a>
 
-                    <a href="#">
+                    <a href="reg.html">
                         <img src="img/profile.svg" alt="profile">
                     </a>
 
-                    <a href="#" class="header__right-bin">
+                    <a href="cart.html" class="header__right-bin">
                         <img src="img/bin.svg" alt="bin">
                         <span class="header__right-bin-count">0</span>
                     </a>
