--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                     <a href="index.html">
                         <img src="img/logo.png" alt="logo">
                     </a>
+                    
+                    <a href="tel:+78005552525">Консультация</a> 
 
                     <a href="#">
                         <img src="img/search.svg" alt="search">
